--- a/style.css
+++ b/style.css
@@ -23,9 +23,9 @@ body {
 .wrapper {
   width: 420px;
   background: transparent;
-  border: 2px solid rgba(255, 255, 255, .2);;
+  border: 2px solid rgba(255, 255, 255, .2);
   color: #fff;
-  border-radius: 10px;
+  border-radius: 100px;
   padding: 30px 40px;
   backdrop-filter: blur(20px);
   box-shadow: 0 0 10px rgba(0, 0, 0, .2);
