--- a/style.css
+++ b/style.css
@@ -1,146 +1,85 @@
-html, body {
-    height: 100%;
-    width: 100%;
-}
-
-* {
+*{
     margin: 0;
-    padding: 0;
+    padding: 0%;
     box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
+    font-family: sans-serif;
 }
 
-body {
+.container{
     display: flex;
     justify-content: center;
+    background-color: antiquewhite;
+    width: 100%;
+    height: 100vh;
+
+}
+
+.notificationContainer{
+    background-color: white;
+    width: 700px;
+    padding: 1rem 1rem;
+    border-radius: 1rem;
+}
+
+header{
+    display: flex;
     align-items: center;
-    min-height: 100vh;
-    background: url(./images/giphy.gif);
-    background-size: cover;
-    background-position: center;
+    justify-content: space-between;
+    margin-bottom: 2rem
 }
 
-.wrapper {
-    width: 420px;
-    background: transparent;
-    border: 2px solid #fff3;
-    color: #fff;
-    border-radius: 100px;
-    padding: 30px 40px;
-    backdrop-filter: blur(20px);
-    box-shadow: 0 0 10px #0003;
+.notificationHeader{
+    display: flex;
+    align-items: center;
 }
 
-.wrapper h1 {
-    font-size: 36px;
-    text-align: center;
-}
-
-.wrapper .input-box {
-    position: relative;
-    width: 100%;
-    margin: 30px 0;
-}
-
-.input-box input,
-.input-box select,
-textarea {
-    width: 100%;
-    background: transparent;
-    outline: none;
-    border: 2px solid #fff3;
-    border-radius: 40px;
-    font-size: 16px;
-    color: #fff;
-    padding: 20px;
-    box-sizing: border-box;
-}
-
-.input-box input::placeholder,
-textarea::placeholder {
-    color: #fff;
-}
-
-.input-box select {
-    padding: 10px;
-}
-
-textarea {
-    resize: none;
-    height: auto; /* Allowing the height to adjust as per content */
-}
-
-textarea.desc-box,
-textarea.location-box {
-    margin-bottom: 20px; /* Adding space below the textareas */
-}
-
-button.skill-add {
-    width: 100%;
-    height: 45px;
-    background: green;
-    outline: none;
-    border: 2px solid #fff3;
-    border-radius: 40px;
-    font-size: 16px;
-    color: #fff;
-    cursor: pointer;
-    margin: 10px 0;
-    display: block;
-}
-
-#skill-list {
-    margin-top: 0px;
-}
-
-button.btn {
-    width: 100%;
-    padding: 10px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-button.btn:hover {
-    background-color: #0056b3;
-}
-
-.remove-date-btn,
-.remove-skill-btn {
+#num-of-notifs{
+    background-color: gray;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 700;
+    width: 30px;
+    height: 30px;
+    border-radius: 0.5rem;
     margin-left: 10px;
-    background-color: red;
 }
 
-.date-entry {
-    margin: 10px;
+#mark-as-read{
+    background-color: white;
+    padding: 0.5rem 0.5rem;
+    border: 2px solid gray;
+    border-radius: 100px;
+    color: gray;
+    cursor: pointer;
+}
+#mark-as-read:hover{
+    cursor: black;
 }
 
-.wrapper .register-link {
-    font-size: 14.5px;
-    text-align: center;
-    margin: 20px 0 15px;
+main{
+ display: flex;
+ flex-direction: column;
+ gap: 1rem;
 }
 
-.register-link p a {
-    color: #fff;
-    text-decoration: none;
-    font-weight: 600;
+.notificationCard{
+    display: flex;
+    align-items: center;
+    padding: 1rem;
+    border: 2px solid white;
+    border-radius: 100px;
 }
-
-.register-link p a:hover {
-    text-decoration: underline;
+.notificationCard img{
+    width: 50px;
 }
-
-.option {
-    color: #000;
+.notificationCard.description{
+    margin-left: 10px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
 }
-
-#select-menus option, #skill-select option {
-	color: black;
-}
-
-#availability {
-	margin-top: 5px;
+.unread{
+    background-color: gray;
 }
